# substd

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  workspace.code-workspace
_deprecated/inc/: cache.hpp  intersection.hpp  range.hpp  ray.hpp  rect.hpp  transform.hpp
_deprecated/inc/raycoll/: aabbraychecker.cpp  aabbraychecker.hpp  aabbraycollider.cpp  aabbraycollider.hpp  raychecker.hpp  raycollidable.cpp  raycollidable.hpp  raycollisiongroup.cpp  raycollisiongroup.hpp
_deprecated/src/: cellmap.cpp  transform.cpp
_old/inc/: dool.hpp  mat.hpp  math.hpp  modulo.hpp  readfile.hpp  rect.hpp  util.hpp
_old/src/: graph.cpp  itransformable.cpp  util.cpp
include/substd/: animation.hpp  cache.hpp  cellmap.hpp  constants.hpp  corner.hpp  graph.hpp  ibindable.hpp  imodifiable.hpp  interfaces.hpp  intersection.hpp  io.hpp  iregisterable.hpp  itransformable.hpp  mat.hpp  math.hpp  modulo.hpp  pairing.hpp  range.hpp  ray.hpp  raycoll.hpp  template.hpp  transform.hpp  transformable.hpp  tree.hpp  typedef.hpp  util.hpp  vec.hpp
package/vcpkg/: README.md
package/vcpkg/substd/: portfile.cmake  vcpkg.json
src/: CMakeLists.txt  Test_vec.cpp  dool.cpp  readfile.cpp  transformable.cpp  tree.cpp
tests/: CMakeLists.txt  compile_time_test.cpp  vec_test.cpp
